welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:16: error: ')' expected but '}' found.
                     lignemotif2(Color.yellow,Color.green)}
                                                          ^